crates/panache-parser/tests/snapshots/yaml__yaml_suite_27NA.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: 27NA
input: "%YAML 1.2\n--- text\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
