crates/panache-parser/tests/snapshots/yaml__yaml_suite_2AUY.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: 2AUY
input: " - !!str a\n - b\n - !!int 42\n - d\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
