crates/panache-parser/tests/snapshots/yaml__yaml_suite_2CMS.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: 2CMS
input: "this\n is\n  invalid: x\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_PARSE_INVALID_KEY_TOKEN:unexpected scalar at block-map level (no key)@0..18]
