crates/panache-parser/tests/snapshots/yaml__yaml_suite_2EBW.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: 2EBW
input: "a!\"#$%&'()*+,-./09:;<=>?@AZ[\\]^_`az{|}~: safe\n?foo: safe question mark\n:foo: safe colon\n-foo: safe dash\nthis is#not: a comment\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
