crates/panache-parser/tests/snapshots/yaml__yaml_suite_2XXW.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: 2XXW
input: "# Sets are represented as a\n# Mapping where each key is\n# associated with a null value\n--- !!set\n? Mark McGwire\n? Sammy Sosa\n? Ken Griff\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
