crates/panache-parser/tests/snapshots/yaml__yaml_suite_33X3.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 623
expression: snapshot
---
case_id: 33X3
input: "---\n- !!int 1\n- !!int -2\n- !!int 33\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
