crates/panache-parser/tests/snapshots/yaml__yaml_suite_35KP.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: 35KP
input: "--- !!map\n? a\n: b\n--- !!seq\n- !!str c\n--- !!str\nd\ne\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
