crates/panache-parser/tests/snapshots/yaml__yaml_suite_36F6.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: 36F6
input: "---\nplain: a\n b\n\n c\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
