crates/panache-parser/tests/snapshots/yaml__yaml_suite_3ALJ.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 717
expression: snapshot
---
case_id: 3ALJ
input: "- - s1_i1\n  - s1_i2\n- s2\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
